Updated sass/templates/sass5_sheet.py to return the required html for the radio button group

--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -57,24 +57,9 @@
                             Stones In Current (SIC)
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label"
-                                 name="sic-rating">
-                                1&nbsp;
-                                <input type="radio" name="sic-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="sic-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="sic-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="sic-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="sic-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -83,23 +68,9 @@
                             Stones Out Of Current (SOOC)
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="sooc-rating">
-                                1&nbsp;
-                                <input type="radio" name="sooc-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="sooc-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="sooc-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="sooc-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="sooc-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_out_of_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -108,23 +79,9 @@
                             Bedrock
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="bedrock-rating">
-                                1&nbsp;
-                                <input type="radio" name="bedrock-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="bedrock-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="bedrock-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="bedrock-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="bedrock-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -133,23 +90,9 @@
                             Aquatic Veg
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="aquatic-veg-rating">
-                                1&nbsp;
-                                <input type="radio" name="aquatic-veg-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="aquatic-veg-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="aquatic-veg-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="aquatic-veg-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="aquatic-veg-rating"
-                                        value="5">
-                            </div>
+                           {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -158,23 +101,9 @@
                             MargVeg In Current
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="mic-rating">
-                                1&nbsp;
-                                <input type="radio" name="mic-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="mic-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="mic-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="mic-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="mic-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -183,23 +112,9 @@
                             MargVeg Out Of Current
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="mooc-rating">
-                                1&nbsp;
-                                <input type="radio" name="mooc-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="mooc-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="mooc-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="mooc-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="mooc-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -208,23 +123,9 @@
                             Gravel
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="gravel-rating">
-                                1&nbsp;
-                                <input type="radio" name="gravel-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="gravel-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="gravel-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="gravel-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="gravel-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -233,23 +134,9 @@
                             Sand
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="sand-rating">
-                                1&nbsp;
-                                <input type="radio" name="sand-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="sand-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="sand-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="sand-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="sand-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -258,23 +145,9 @@
                             Mud
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="mud-rating">
-                                1&nbsp;
-                                <input type="radio" name="mud-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="mud-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="mud-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="mud-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="mud-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
@@ -283,23 +156,9 @@
                             Hand picking/Visual observation
                         </td>
                         <td>
-                            <div class="form-control sass-radio-label" name="hand-picking-rating">
-                                1&nbsp;
-                                <input type="radio" name="hand-picking-rating"
-                                        value="1" checked>
-                                &nbsp;&nbsp;&nbsp;2&nbsp;
-                                <input type="radio" name="hand-picking-rating"
-                                        value="2">
-                                &nbsp;&nbsp;&nbsp;3&nbsp;
-                                <input type="radio" name="hand-picking-rating"
-                                        value="3">
-                                &nbsp;&nbsp;&nbsp;4&nbsp;
-                                <input type="radio" name="hand-picking-rating"
-                                        value="4">
-                                &nbsp;&nbsp;&nbsp;5&nbsp;
-                                <input type="radio" name="hand-picking-rating"
-                                        value="5">
-                            </div>
+                            {% autoescape off %}
+                                {{ sass_sheet.biotope_stones_in_current }}
+                            {% endautoescape %}
                         </td>
 
                     </tr>
