Updated html to reflect the correct tags

--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -80,7 +80,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_bedrock }}
                             {% endautoescape %}
                         </td>
 
@@ -91,7 +91,7 @@
                         </td>
                         <td>
                            {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_aquatic_vegetation }}
                             {% endautoescape %}
                         </td>
 
@@ -102,7 +102,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_margin_veg_in_current }}
                             {% endautoescape %}
                         </td>
 
@@ -113,7 +113,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_margin_veg_out_of_current }}
                             {% endautoescape %}
                         </td>
 
@@ -124,7 +124,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_gravel }}
                             {% endautoescape %}
                         </td>
 
@@ -135,7 +135,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_sand }}
                             {% endautoescape %}
                         </td>
 
@@ -146,7 +146,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_mud }}
                             {% endautoescape %}
                         </td>
 
@@ -157,7 +157,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {{ sass_sheet.biotope_stones_in_current }}
+                                {{ sass_sheet.biotope_hand_picking }}
                             {% endautoescape %}
                         </td>
 
