Undid changes to sass5_sheet.py

--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -80,7 +80,7 @@
                         </td>
                         <td>
                             {% autoescape off %}
-                                {% get_html_for_radio_group "bedrock-rating" sass_sheet.boitope_bedrock %}
+                                {% get_html_for_radio_group "bedrock-rating" sass_sheet.biotope_bedrock  %}
                             {% endautoescape %}
                         </td>
 
