Add total records under search result title

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -305,7 +305,6 @@
         </div>
         <div class="row">
             <div class="search-box">
-                GILLI
             </div>
         </div>
         <div class="row" style="margin-top: 10px; margin-bottom: 12px">
@@ -937,6 +936,12 @@
     <div class="result-search" data-search-result-id="">
         <p class="group-title"><%= name %></p>
         <a class="group-description"><%= count %> occurrences</a>
+    </div>
+</script>
+
+<script type="text/template" id="show-more-result-site-template">
+    <div class="show-more-button" data-search-result-id="">
+        <p class="group-title">Show More</p>
     </div>
 </script>
 
