--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -312,7 +312,7 @@
                 Select an item to find more detailed information.
             </div>
         </div>
-        <div id="search-result-content">
+        <div id="search-result-content" class="noselect">
         </div>
     </div>
 </script>
