--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -163,3 +163,13 @@ h6 {
   color: #526B43 !important;
   border-color: #526B43 !important;
 }
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
