Changed SASS form input to use radio buttons instead of a select box (#732)
* Updated required JS and HTML for values to be passed back via a radio button

* Final css change - removed extraneous borders.

* Updated sass/templates/sass5_sheet.py to return the required html for the radio button group

* Updated html to reflect the correct tags

* Template tag working - returning radio button html as needed

* Updated html to use new template tag

* Removed empty sass.py

* Undid changes to sass5_sheet.py

* cleaned flake errors

* Fixed another 2 flake errors

--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -68,3 +68,11 @@ td.sampled-name {
 .fbis-sass-logo img {
     padding-top: 50px;
 }
+
+.sass-radio-label {
+    line-height: 2rem;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-flex;
+    border-style: none;
+}
