--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -303,7 +303,6 @@
         </div>
         <div class="row">
             <div class="search-box">
-                GILLI
             </div>
         </div>
         <div class="row" style="margin-top: 10px; margin-bottom: 12px">
@@ -311,7 +310,7 @@
                 Select an item to find more detailed information.
             </div>
         </div>
-        <div id="search-result-content">
+        <div id="search-result-content" class="noselect">
         </div>
     </div>
 </script>
@@ -938,6 +937,12 @@
     <div class="result-search" data-search-result-id="">
         <p class="group-title"><%= name %></p>
         <a class="group-description"><%= count %> occurrences</a>
+    </div>
+</script>
+
+<script type="text/template" id="show-more-result-site-template">
+    <div class="show-more-button" data-search-result-id="">
+        <p class="group-title">Show More</p>
     </div>
 </script>
 
