--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -260,8 +260,11 @@
                 </div>
             </div>
             <div class="row" style="display: none">
-                <div class="col-lg-12 filter-content" id="filter-collectors">
-                </div>
+                <select data-placeholder="Choose a collector/assesor..."
+
+                        id="filter-collectors"
+                        multiple>
+                </select>
                 <div class="button-filter-wrapper">
                     <button class="apply-filter">Apply Filter</button>
                     <button class="clear-filter">Clear Filter</button>
