Updated css so height displays properly for the multi search bar

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2244,6 +2244,7 @@ div:hover::-webkit-scrollbar {
 
 #filter_collectors_chosen .search-choice {
     line-height: 225%;
+    height: 100%;
 }
 
 #filter_collectors_chosen input {
