Chosen filter working for both Collector/Assessor as well as Study Reference - Only need to make sure clear filter button works now

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -241,9 +241,10 @@
                 </div>
             </div>
             <div class="row" style="display: none">
-                <div class="col-lg-12 filter-content"
-                     id="filter-study-reference">
-                </div>
+                 <select data-placeholder="Choose a reference..."
+                        id="filter-study-reference"
+                        multiple>
+                </select>
                 <div class="button-filter-wrapper">
                     <button class="apply-filter">Apply Filter</button>
                     <button class="clear-filter">Clear Filter</button>
@@ -260,8 +261,7 @@
                 </div>
             </div>
             <div class="row" style="display: none">
-                <select data-placeholder="Choose a collector/assesor..."
-
+                <select data-placeholder="Choose a collector/assessor..."
                         id="filter-collectors"
                         multiple>
                 </select>
