Added changes to radio buttons as well as styling to allign buttons with headings

--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -70,9 +70,8 @@ td.sampled-name {
 }
 
 .sass-radio-label {
-    line-height: 2rem;
-    text-align: center;
-    vertical-align: middle;
     display: inline-flex;
     border-style: none;
+    padding: 0;
+    text-align: center;
 }
