--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -48,7 +48,7 @@
                         </th>
                         <th>
                             <div class="container-fluid">
-                                <div class="row">
+                                <div class="row" style="text-align: center;">
                                     {% autoescape off %}
                                         {% get_html_for_radio_group_headings 6 %}
                                     {% endautoescape %}
