--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -960,40 +960,50 @@
 </script>
 
 <script type="text/template" id="species-template">
-    <div class="content">
-        <div class="iucn-status"><span
-                class="name"><%= iucn_status_name %></span><span
-                class="full-name"><%= iucn_status_full_name %></span></div>
-        <div class="species-count"><b><%= count %></b><br> <span
-                class="records-link"> <a href="#">records</a></span></div>
-        <div class="taxonomy-system">
+    <div id="species-detail-summary-head-table">
+        <table>
+            <tr class="species-detail-row">
+                <td class="species-detail-cell cell-header">
+                    Taxon
+                </td>
+                <td class="species-detail-cell cell-content">
+                    <%= scientific_name %>
+                </td>
+            </tr>
+             <tr class="species-detail-row">
+                <td class="species-detail-cell cell-header">
+                    Common Name
+                </td>
+                <td class="species-detail-cell cell-content">
+                    <%= canonical_name %>
+                </td>
+            </tr>
+             <tr class="species-detail-row">
+                <td class="species-detail-cell cell-header">
+                    Number of occurrence records
+                </td>
+                <td class="species-detail-cell cell-content">
+                    <%= count %>
+                </td>
+            </tr>
+{#             <tr class="species-detail-row">#}
+{#                <td class="species-detail-cell cell-header">#}
+{#                    Number of sites#}
+{#                </td>#}
+{#                <td class="species-detail-cell cell-content">#}
+{#                    <%= scientific_name %>#}
+{#                </td>#}
+{#            </tr>#}
+        </table>
+    </div>
+    <div id="species-detail-summary-origin">
 
-        </div>
-        <div class="origin-info">
-            <div class="row">
-                <div class="col-lg-5">
-                    ORIGIN
-                </div>
-                <div class="col-lg-7">
-                    : <%= origin %>
-                </div>
-            </div>
-        </div>
-        <div class="endemism-info">
-            <div class="row">
-                <div class="col-lg-5">
-                    ENDEMISM
-                </div>
-                <div class="col-lg-7">
-                    : <%= endemism %>
-                </div>
-            </div>
-        </div>
-        <div class="open-detailed-button-container">
-            <button class="btn btn-inf open-detailed-view">Open detailed
-                dashboard
-            </button>
-        </div>
+    </div>
+    <div id="species-detail-summary-endemism">
+
+    </div>
+    <div id="species-detail-summary-conservation-status">
+
     </div>
 </script>
 
